[package]
name = "embassy-drv2605l"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT OR Apache-2.0"
description = "Embassy-rs async driver for DRV2605L haptic driver"
repository = "https://github.com/yourusername/embassy-drv2605l"
keywords = ["embedded", "haptic", "drv2605l", "embassy", "async"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
embassy-time = "0.4.0"
embassy-embedded-hal = "0.3.0"
embedded-hal-async = "1.0"
defmt = { version = "0.3", optional = true }

[features]
default = []
defmt = ["dep:defmt"]
