[package]
name = "embassy-drv2605l"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Embassy-rs async driver for DRV2605L haptic driver"
repository = "https://github.com/yourusername/embassy-drv2605l"
keywords = ["embedded", "haptic", "drv2605l", "embassy", "async"]
categories = ["embedded", "no-std", "hardware-support"]

[dependencies]
embedded-hal = { version = "1.0", optional = true }
embedded-hal-async = { version = "1.0", optional = true }
embassy-time = { version = "0.5.0", optional = true }
defmt = { version = "1.0.1", optional = true }

[features]
default = ["async"]
async = ["dep:embedded-hal-async", "dep:embassy-time"]
blocking = ["dep:embedded-hal"]
defmt = ["dep:defmt"]
